--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
 <html>
   <div id="root"></div>
-  <script src="./dist/index_bundle.js"></script>
+  <script src="../dist/index_bundle.js"></script>
 </html>
